インデックスを指定して参照を保持できるようにしました。
git-svn-id: https://www.seasar.org/svn/sandbox/s2flex2/trunk@1552 c2bc002a-290a-0410-b2b5-f81595976b5c