@@ -1,5 +1,5 @@
 /*
- * Copyright 2004-2007 the Seasar Foundation and the Others.
+ * Copyright 2004-2009 the Seasar Foundation and the Others.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -34,9 +34,18 @@ public class Amf3ObjectReferences {
 
     public void addReference(final Object value) {
         referenceList.add(value);
-        referenceMap.put(value, new Integer(referenceList.size() - 1));
+        referenceMap.put(value, Integer.valueOf(referenceList.size() - 1));
     }
 
+    public void setReferenceAt(final int index, Object value) {
+        Object currentValue = referenceList.get(index);
+        if( currentValue != null ){
+            referenceMap.remove(currentValue);
+        }
+        referenceList.add(index, value);
+        referenceMap.put(value, Integer.valueOf(index));
+    }
+    
     public Object getAt(final int index) {
         return referenceList.get(index);
     }
